--- a/eureka-a/src/main/resources/application-dev.yml
+++ b/eureka-a/src/main/resources/application-dev.yml
@@ -4,8 +4,10 @@ server:
 eureka: 
   instance:
     hostname: eureka1
-    lease-renewal-interval-in-seconds: 10   ##客户端向服务器（注册中心发送心跳的时间间隔）
-    lease-expiration-duration-in-seconds: 120 ##服务器（注册中心）租期到期的时间, 也就是说服务器在收到最后一次心跳的时间上限
+    ##客户端向服务器（注册中心发送心跳的时间间隔）
+    lease-renewal-interval-in-seconds: 10
+    ##服务器（注册中心）租期到期的时间, 也就是说服务器在收到最后一次心跳的时间上限
+    lease-expiration-duration-in-seconds: 120
   client:
     service-url:
       #defaultZone: http://eureka1:8001/eureka/  
